@@ -1,3 +1,8 @@
+2011-05-24  Donal K. Fellows  <dkf@users.sf.net>
+
+	* library/msgcat/msgcat.tcl (msgcat::mcset, msgcat::mcmset): Remove
+	some useless code; [dict set] builds dictionary levels for us.
+
 2011-05-17  Andreas Kupries  <andreask@activestate.com>
 
 	* generic/tclCompile.c (TclFixupForwardJump): Tracked down and fixed
